Don't force an interstitial when showing a login prompt for a standalone app

BUG=664838
R=mlamouri@chromium.org

Review-Url: https://codereview.chromium.org/2590183002
Cr-Commit-Position: refs/heads/master@{#439790}

Former-commit-id: 73a71ba1b6637d9b3bc485bd4cefb639b9c42da4